# waymarks

./: CODE_CONVENTIONS.md  Cargo.toml  bench.sh  build.sh  debug_build.sh  test.sh
lib/baumhard/: Cargo.toml  build.rs  readme.md  todo.txt
lib/baumhard/benches/: _template.rs  test_bench.rs
lib/baumhard/documents/: glossary.md
lib/baumhard/documents/mutators/: mutators.md
lib/baumhard/src/: lib.rs
lib/baumhard/src/core/: animation.rs  mod.rs  primitives.rs
lib/baumhard/src/core/tests/: mod.rs  primitives_tests.rs
lib/baumhard/src/font/: fonts.rs
lib/baumhard/src/font/fonts/212-keyboard-font/: info.txt
lib/baumhard/src/font/fonts/2peas-hearts-delight-font/: info.txt
lib/baumhard/src/font/fonts/alice-in-wonderland-font/: info.txt
lib/baumhard/src/font/fonts/alphamusicman-font/: info.txt
lib/baumhard/src/font/fonts/alphasports-font/: info.txt
lib/baumhard/src/font/fonts/casanova-font/: info.txt
lib/baumhard/src/font/fonts/chubby-dotty-font/: info.txt
lib/baumhard/src/font/fonts/cimero-pro-font/: info.txt
lib/baumhard/src/font/fonts/critters1dc-font/: info.txt
lib/baumhard/src/font/fonts/crystal-universe-font/: info.txt
lib/baumhard/src/font/fonts/culinary-art-font/: info.txt
lib/baumhard/src/font/fonts/dense-letters-font/: info.txt
lib/baumhard/src/font/fonts/distorfont-font/: info.txt
lib/baumhard/src/font/fonts/egyptienne-zierinitialien-font/: info.txt
lib/baumhard/src/font/fonts/faster-one-font/: info.txt
lib/baumhard/src/font/fonts/finger-alphabet-graffiti-font/: info.txt
lib/baumhard/src/font/fonts/flowers3-font/: info.txt
lib/baumhard/src/font/fonts/galatia-sil-font/: info.txt
lib/baumhard/src/font/fonts/little-city-2000-font/: info.txt
lib/baumhard/src/font/fonts/love-romance-font/: info.txt
lib/baumhard/src/font/fonts/mexican-ornaments-font/: info.txt
lib/baumhard/src/font/fonts/nightcrow-font/: info.txt
lib/baumhard/src/gfx_structs/: area.rs  element.rs  mod.rs  model.rs  mutator.rs  predicate.rs  scene.rs  tree.rs  tree_walker.rs
lib/baumhard/src/gfx_structs/tests/: mod.rs  model_tests.rs  region_tests.rs  tree_tests.rs  tree_walker_tests.rs
lib/baumhard/src/gfx_structs/util/: hitbox.rs  mod.rs  regions.rs
lib/baumhard/src/shaders/: shaders.rs
lib/baumhard/src/util/: arena_utils.rs  color.rs  geometry.rs  grapheme_chad.rs  mod.rs  ordered_vec2.rs  palettes.rs  primes.rs  simd.rs
lib/baumhard/src/util/tests/: arena_utils_tests.rs  color_tests.rs  geometry_tests.rs  grapheme_chad_tests.rs  mod.rs  ordered_vec2_tests.rs  primes_test.rs
src/: main.rs
(+276 files in other folders)
