workspace = { members = ["lib/baumhard"] }
[package]
name = "codebound"
version = "0.1.0"
edition = "2021"

[profile.release-lto]
inherits = "release"
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16.0"
# Look into Ropey for text backend (for handling larger texts)
rustix = "0.38.28"
rustc-hash = "2.0.0"
unicode-segmentation = "1.11.0"
wgpu = "22.0.0"
glyphon = "0.10.0"
cosmic-text = "0.12.0"
tinyvec = "1.8.0"
# Alternative: https://crates.io/crates/ab_glyph
glam = {version = "0.29.0", features = ["serde"]}
futures = "0.3.30"
pollster = "0.3.0"
crossbeam-channel = "0.5.13"
winit = "0.30.1"
serde = {version = "1.0.194", features = ["derive"]}
serde-lexpr = "0.1.3"
lazy_static = "1.5.0"
syn = "2.0.53"
log = { version = "0.4.20", features = ["release_max_level_off"] }
env_logger = "0.11.3"
smol_str = "0.3.1"
indextree = {version = "4.7.2", features = ["serde"]}
ttf-parser = "0.25.0"
enum-map = "2.7.3"
strum = "0.26.1"
strum_macros = "0.26.1"
baumhard = {path="./lib/baumhard"}

[build-dependencies]
walkdir = "2.5.0"
path-slash = "0.2.1"
ttf-parser = "0.25.0"
regex = "1.11.0"
lazy_static = "1.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

