[package]
name = "baumhard"
version = "0.1.0"
edition = "2021"

[profile.release-lto]
inherits = "release"
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = {version = "1.0.194", features = ["derive"]}
serde-lexpr = "0.1.3"
slab = "0.4.9"
lazy_static = "1.5.0"
syn = "2.0.53"
log = { version = "0.4.20", features = ["release_max_level_off"] }
env_logger = "0.11.3"
smol_str = "0.3.1"
indextree = {version = "4.7.2", features = ["serde"]}
glam = {version = "0.29.0", features = ["serde"]}
cosmic-text = "0.12.0"
tinyvec = "1.8.0"
unicode-segmentation = "1.11.0"
rustc-hash = "2.0.0"
strum = "0.26.1"
strum_macros = "0.26.1"
enumset = {version = "1.1.3", features = ["serde"]}
ordered-float = {version = "4.3.0", features = ["serde"]}
crossbeam-channel = "0.5.13"
derivative = "2.2.0"
thiserror = "1.0.64"

[build-dependencies]
walkdir = "2.5.0"
path-slash = "0.2.1"
ttf-parser = "0.25.0"
regex = "1.11.0"
lazy_static = "1.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "test_bench"
harness = false